--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
                 <img src="image/Osama-name-Logo.png" alt="" />
             </a>
             <nav>
-                <ul>
-                    <li><a href="#" class="active">Home</a></li>
+                <div class="toggle-menu " id="ham">
+                    <span class="n1 " id=""></span>
+                    <span class="n2 " id=""></span>
+                    <span class="n3 " id=""></span>
+                </div>
+                <ul class="nlist">
+                    <li><a href="#" class="a ctive">Home</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">About</a></li>
@@ -37,6 +42,7 @@
             </nav>
         </div>
     </header>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
