--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="image/Osama-name-Logo.png" alt="" />
+                <span>LOGO</span>
+                <!-- <img src="image/Osama-name-Logo.png" alt="" /> -->
             </a>
             <nav>
                 <div class="toggle-menu " id="ham">
@@ -29,7 +30,7 @@
                     <span class="n2 " id=""></span>
                     <span class="n3 " id=""></span>
                 </div>
-                <ul class="nlist">
+                <ul class="nlist " id="nList">
                     <li><a href="#" class="a ctive">Home</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
