--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <header>
         <div class="container">
             <a href="#" class="logo">
-                <span>LOGO</span>
+                <span>OSAMA</span>
                 <!-- <img src="image/Osama-name-Logo.png" alt="" /> -->
             </a>
             <nav>
-                <div class="toggle-menu " id="ham">
-                    <span class="n1 " id=""></span>
-                    <span class="n2 " id=""></span>
-                    <span class="n3 " id=""></span>
+                <div class="toggle-menu" id="ham">
+                    <span class="n1" id=""></span>
+                    <span class="n2" id=""></span>
+                    <span class="n3" id=""></span>
                 </div>
-                <ul class="nlist " id="nList">
+                <ul class="nlist" id="nList">
                     <li><a href="#" class="a ctive">Home</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
@@ -43,6 +43,42 @@
             </nav>
         </div>
     </header>
+    <!-- Start landing -->
+    <section class="landing">
+        <div class="overlay">
+
+
+            <div class="profilePic">
+                <div class="img">
+                    <img src="image/osama-profile.png" alt="">
+                </div>
+            </div>
+
+
+
+            <div class="floatDesc">
+                <div class="descContainer">
+                    <h2>
+                        Osama Youssef <br />
+                        DevOps Engineer | AWS | Docker |  <a href="#">...</a>
+                    </h2>
+                    <p>
+                        I'm a DevOps Engineer, an AWS Certified Cloud Practitioner, and a
+                        graduate of the AWS re/Start program at the Information Technology
+                        Institute (ITI). With hands-on labs and projects, <a href="#">...</a>
+                        
+                        <!-- I've studied DevOps tools & technologies in architecting with AWS and digital
+                        ocean, automating with python and bash script, developing CI/CD
+                        pipelines with Jenkins, monitoring with Prometheus, and proficient
+                        with configuration management with Ansible. -->
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- End landing -->
+
     <script src="js/main.js"></script>
 </body>
 
