--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <span class="n3" id=""></span>
                 </div>
                 <ul class="nlist" id="nList">
-                    <li><a href="#" class="a ctive">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a class="nLink" href="#" class="a ctive">Home</a></li>
+                    <li><a class="nLink" href="#Services">Services</a></li>
+                    <li><a class="nLink" href="#">Portfolio</a></li>
+                    <li><a class="nLink" href="#">About</a></li>
+                    <li><a class="nLink" href="#">Contact</a></li>
                 </ul>
                 <div class="form">
                     <i class="fas fa-search"></i>
@@ -60,17 +60,14 @@
                 <div class="descContainer">
                     <h2>
                         Osama Youssef <br />
-                        DevOps Engineer | AWS | Docker |  <a href="#">...</a>
+                        <span>
+                            DevOps Engineer <br> | AWS | Docker | <a href="#">...</a>
+                        </span>
                     </h2>
                     <p>
                         I'm a DevOps Engineer, an AWS Certified Cloud Practitioner, and a
                         graduate of the AWS re/Start program at the Information Technology
                         Institute (ITI). With hands-on labs and projects, <a href="#">...</a>
-                        
-                        <!-- I've studied DevOps tools & technologies in architecting with AWS and digital
-                        ocean, automating with python and bash script, developing CI/CD
-                        pipelines with Jenkins, monitoring with Prometheus, and proficient
-                        with configuration management with Ansible. -->
                     </p>
                 </div>
             </div>
@@ -78,6 +75,24 @@
         </div>
     </section>
     <!-- End landing -->
+    <!-- Start Services -->
+    <section class="Services">
+        <div class="container">
+            <div class="title" id="Services">
+                <h2>Services</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris 
+                    blandit aliquet elit, eget tincidunt.</p>
+            </div>
+
+        </div>
+
+
+    </section>
+
+
+
+    <!-- End Services -->
+
 
     <script src="js/main.js"></script>
 </body>
