--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 <body>
     <header>
         <div class="container">
+            <div class="bottom-header-line"></div>
             <a href="#" class="logo">
-                <span>OSAMA</span>
+                <h2 class="tLogo" data-text="OSAMA">OSAMA</h2>
                 <!-- <img src="image/Osama-name-Logo.png" alt="" /> -->
             </a>
             <nav>
@@ -80,8 +81,38 @@
         <div class="container">
             <div class="title" id="Services">
                 <h2>Services</h2>
-                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris 
-                    blandit aliquet elit, eget tincidunt.</p>
+                <p>What can I do for you?</p>
+            </div>
+
+            <div class="serv-cont">
+                <div class="serv-box">
+                    <i class="fas fa-desktop"></i>
+                    <div class="text">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, beatae.</p>
+                    </div>
+                </div>
+                <div class="serv-box">
+                    <i class="fas fa-cog"></i>
+                    <div class="text">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, beatae.</p>
+                    </div>
+                </div>
+                <div class="serv-box">
+                    <i class="fas fa-ruler"></i>
+                    <div class="text">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, beatae.</p>
+                    </div>
+                </div>
+                <div class="serv-box">
+                    <i class="fas fa-key"></i>
+                    <div class="text">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, beatae.</p>
+                    </div>
+                </div>
             </div>
 
         </div>
