add 'I am' section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a class="nLink" href="#" class="a ctive">Home</a></li>
                     <li><a class="nLink" href="#Services">Services</a></li>
                     <li><a class="nLink" href="#">Portfolio</a></li>
-                    <li><a class="nLink" href="#">About</a></li>
+                    <li><a class="nLink" href="#iam">About</a></li>
                     <li><a class="nLink" href="#">Contact</a></li>
                 </ul>
                 <div class="form">
@@ -76,12 +76,19 @@
         </div>
     </section>
     <!-- End landing -->
-    <!-- Start me -->
+    <!-- Start About Me -->
     <section class="iam">
         <div class="container">
             <div class="title" id="iam">
                 <h2>About Me</h2>
                 <!-- <p>What can I do for you?</p> -->
+            </div>
+            <div class="cont">
+                <!-- <img src="image/osama-about-me.png" alt=""> -->
+                <img src="image/osama-about-me-strock.png" alt="">
+                <P>
+                    With hands-on labs and projects, I've studied DevOps tools & technologies in architecting with AWS and digital ocean, automating with python and bash script, developing CI/CD pipelines with Jenkins, monitoring with Prometheus, and proficient with configuration management with Ansible.
+                </P>
             </div>
 
         </div>
