--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
             <div class="profilePic">
                 <div class="img">
-                    <img src="image/osama-profile.png" alt="">
+                    <!-- <img src="image/osama-profile.png" alt=""> -->
+                    <img src="image/osama-profile-selwet.png" alt="">
                 </div>
             </div>
 
@@ -72,9 +73,11 @@
                         </span>
                     </h2>
                     <p>
-                        I'm a DevOps Engineer, an AWS Certified Cloud Practitioner, and a
-                        graduate of the AWS re/Start program at the Information Technology
-                        Institute (ITI). With hands-on labs and projects, <a href="#">...</a>
+                        I'm a DevOps Engineer, an AWS Certified Cloud Practitioner,
+
+                        and a graduate of the AWS re/Start program at the Information 
+                        Technology Institute (ITI). With hands-on labs and projects, 
+                        <a href="#">...</a>
                     </p>
                 </div>
             </div>
@@ -94,8 +97,8 @@
                 <p>DevOps Engineer</p>
             </div>
             <div class="cont">
-                <!-- <img src="image/osama-about-me.png" alt=""> -->
-                <img src="image/osama-about-me-strock.png" alt="">
+                <!-- <img src="image/osama-about-me-strock.png" alt=""> -->
+                <img src="image/osama-about-me-strock-selwet.png" alt="">
                 <P>
                     With hands-on labs and projects, I've studied DevOps tools & technologies in architecting with AWS and digital ocean, automating with python and bash script, developing CI/CD pipelines with Jenkins, monitoring with Prometheus, and proficient with configuration management with Ansible.
                 </P>
