--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
             <div class="profilePic">
                 <div class="img">
-                    <!-- <img src="image/osama-profile.png" alt=""> -->
-                    <img src="image/osama-profile-selwet.png" alt="">
+                    <img src="image/osama-profile.png" alt="">
+                    <!-- <img src="image/osama-profile-selwet.png" alt=""> -->
                 </div>
             </div>
 
@@ -97,8 +97,8 @@
                 <p>DevOps Engineer</p>
             </div>
             <div class="cont">
-                <!-- <img src="image/osama-about-me-strock.png" alt=""> -->
-                <img src="image/osama-about-me-strock-selwet.png" alt="">
+                <img src="image/osama-about-me-strock.png" alt="">
+                <!-- <img src="image/osama-about-me-strock-selwet.png" alt=""> -->
                 <P>
                     With hands-on labs and projects, I've studied DevOps tools & technologies in architecting with AWS and digital ocean, automating with python and bash script, developing CI/CD pipelines with Jenkins, monitoring with Prometheus, and proficient with configuration management with Ansible.
                 </P>
@@ -126,42 +126,42 @@
                     <div class="prog-holder">
                         <h4>Linux</h4>
                         <div class="prog">
-                            <span style="width:90%;" data-propress="90%"></span>
+                            <span style="width:20%;" data-width="90%"></span>
                         </div>
                     </div>
 
                     <div class="prog-holder">
                         <h4>Html &amp; Css</h4>
                         <div class="prog">
-                            <span style="width:95%;" data-propress="95%"></span>
+                            <span style="width:20%;" data-width="95%"></span>
                         </div>
                     </div>
 
                     <div class="prog-holder">
                         <h4>Python</h4>
                         <div class="prog">
-                            <span style="width:80%;" data-propress="80%"></span>
+                            <span style="width:20%;" data-width="80%"></span>
                         </div>
                     </div>
 
                     <div class="prog-holder">
                         <h4>Docker</h4>
                         <div class="prog">
-                            <span style="width:75%;" data-propress="75%"></span>
+                            <span style="width:20%;" data-width="75%"></span>
                         </div>
                     </div>
 
                     <div class="prog-holder">
                         <h4>Git &amp; GitHup</h4>
                         <div class="prog">
-                            <span style="width:88%;" data-propress="88%"></span>
+                            <span style="width:20%;" data-width="88%"></span>
                         </div>
                     </div>
 
                     <div class="prog-holder">
                         <h4>AWS Services</h4>
                         <div class="prog">
-                            <span style="width:70%;" data-propress="70%"></span>
+                            <span style="width:20%;" data-width="70%"></span>
                         </div>
                     </div>
 
