--- a/index.html
+++ b/index.html
@@ -97,10 +97,17 @@
                 <p>DevOps Engineer</p>
             </div>
             <div class="cont">
-                <img src="image/osama-about-me-strock.png" alt="">
+                <img class="img1" src="image/osama-about-me-strock.png" alt="">
                 <!-- <img src="image/osama-about-me-strock-selwet.png" alt=""> -->
                 <P>
-                    With hands-on labs and projects, I've studied DevOps tools & technologies in architecting with AWS and digital ocean, automating with python and bash script, developing CI/CD pipelines with Jenkins, monitoring with Prometheus, and proficient with configuration management with Ansible.
+                    I'm a DevOps Engineer, an AWS Certified Cloud Practitioner, 
+                    and a graduate of the AWS re/Start program at the Information 
+                    Technology Institute (ITI). With hands-on labs and projects, 
+                    I've studied DevOps tools & technologies in architecting with 
+                    AWS and digital ocean, automating with python and bash script, 
+                    developing CI/CD pipelines with Jenkins, monitoring with 
+                    Prometheus, and proficient with configuration management with Ansible.
+                    <img class="seg" src="image/segniture-whit.png" alt="">
                 </P>
             </div>
 
@@ -109,7 +116,19 @@
     <!-- End About me -->
 
 
-
+    <!-- - Skills
+    1. Linux 80%
+    2. Kubernetes 60%
+    3. Jenkins 60%
+    4. Ansible 70%
+    5. Docker 75%
+    6. AWS 70%
+    7. Terraform 80%
+    8. Bash 70%
+    9. Python Scripting 75%
+- less priority
+    1. Git & GitHub
+    2. Html &amp; Css -->
 
     <!-- Start Skills -->
     <section class="Skills">
@@ -121,50 +140,89 @@
 
 
             <div class="cont">
-                <div class="skill-cont">
-
+                <div class="skill-cont ">
+<!-- 1 -->
                     <div class="prog-holder">
                         <h4>Linux</h4>
                         <div class="prog">
-                            <span style="width:20%;" data-width="90%"></span>
+                            <span style="width:50%;" data-width="80%"></span>
                         </div>
                     </div>
-
+<!-- 2 -->
                     <div class="prog-holder">
-                        <h4>Html &amp; Css</h4>
+                        <h4>Kubernetes</h4>
                         <div class="prog">
-                            <span style="width:20%;" data-width="95%"></span>
+                            <span style="width:50%;" data-width="60%"></span>
                         </div>
                     </div>
-
+<!-- 3 -->
                     <div class="prog-holder">
-                        <h4>Python</h4>
+                        <h4>Jenkins</h4>
                         <div class="prog">
-                            <span style="width:20%;" data-width="80%"></span>
+                            <span style="width:50%;" data-width="60%"></span>
                         </div>
                     </div>
-
+<!-- 4 -->
+                    <div class="prog-holder">
+                        <h4>Ansible</h4>
+                        <div class="prog">
+                            <span style="width:50%;" data-width="70%"></span>
+                        </div>
+                    </div>
+<!-- 5 -->
                     <div class="prog-holder">
                         <h4>Docker</h4>
                         <div class="prog">
-                            <span style="width:20%;" data-width="75%"></span>
+                            <span style="width:50%;" data-width="75%"></span>
                         </div>
                     </div>
-
+<!-- 6 -->
                     <div class="prog-holder">
+                        <h4>AWS</h4>
+                        <div class="prog">
+                            <span style="width:50%;" data-width="70%"></span>
+                        </div>
+                    </div>
+<!-- 7-->
+                    <div class="prog-holder toggle-skills off">
+                        <h4>Terraform</h4>
+                        <div class="prog">
+                            <span style="width:50%;" data-width="80%"></span>
+                        </div>
+                    </div>
+<!-- 8 -->
+                    <div class="prog-holder toggle-skills off">
+                        <h4>Bash</h4>
+                        <div class="prog">
+                            <span style="width:50%;" data-width="70%"></span>
+                        </div>
+                    </div>
+<!-- 9 -->
+                    <div class="prog-holder toggle-skills off">
+                        <h4>Python Scripting</h4>
+                        <div class="prog">
+                            <span style="width:50%;" data-width="75%"></span>
+                        </div>
+                    </div>
+<!-- 10 -->
+                    <div class="prog-holder  toggle-skills off">
                         <h4>Git &amp; GitHup</h4>
                         <div class="prog">
-                            <span style="width:20%;" data-width="88%"></span>
+                            <span style="width:50%;" data-width="70%"></span>
                         </div>
                     </div>
-
-                    <div class="prog-holder">
-                        <h4>AWS Services</h4>
+<!-- 11 -->
+                    <div class="prog-holder toggle-skills off">
+                        <h4>Html &amp; Css</h4>
                         <div class="prog">
-                            <span style="width:20%;" data-width="70%"></span>
+                            <span style="width:50%;" data-width="75%"></span>
                         </div>
                     </div>
 
+
+
+                    <button class="toggle-skills" id="btn-sk-more">see more</button>
+                    <button class="toggle-skills  off" id="btn-sk-less">see less</button>
                 </div>
                 <img src="image/key.jpg" alt="">
             </div>
