skill section comments are done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-
     <!-- Start Header -->
     <header>
         <div class="container">
@@ -48,46 +47,36 @@
     </header>
     <!-- End Header -->
 
-
-
     <!-- Start landing -->
     <section class="landing">
         <div class="overlay">
-
-
             <div class="profilePic">
                 <div class="img">
-                    <img src="image/osama-profile.png" alt="">
-                    <!-- <img src="image/osama-profile-selwet.png" alt=""> -->
+                    <!-- <img src="image/osama-profile.png" alt="" /> -->
+                    <img src="image/osama-profile-selwet.png" alt="">
                 </div>
             </div>
-
-
 
             <div class="floatDesc">
                 <div class="descContainer">
                     <h2>
                         Osama Youssef <br />
                         <span>
-                            DevOps Engineer <br> | AWS | Docker | <a href="#">...</a>
+                            DevOps Engineer <br />
+                            | AWS | Docker | <a href="#">...</a>
                         </span>
                     </h2>
                     <p>
-                        I'm a DevOps Engineer, an AWS Certified Cloud Practitioner,
-
-                        and a graduate of the AWS re/Start program at the Information 
-                        Technology Institute (ITI). With hands-on labs and projects, 
+                        I'm a DevOps Engineer, an AWS Certified Cloud Practitioner, and a
+                        graduate of the AWS re/Start program at the Information Technology
+                        Institute (ITI). With hands-on labs and projects,
                         <a href="#">...</a>
                     </p>
                 </div>
             </div>
-
         </div>
     </section>
     <!-- End landing -->
-
-
-
 
     <!-- Start About Me -->
     <section class="iam">
@@ -97,24 +86,18 @@
                 <p>DevOps Engineer</p>
             </div>
             <div class="cont">
-                <img class="img1" src="image/osama-about-me-strock.png" alt="">
-                <!-- <img src="image/osama-about-me-strock-selwet.png" alt=""> -->
-                <P>
-                    I'm a DevOps Engineer, an AWS Certified Cloud Practitioner, 
-                    and a graduate of the AWS re/Start program at the Information 
-                    Technology Institute (ITI). With hands-on labs and projects, 
-                    I've studied DevOps tools & technologies in architecting with 
-                    AWS and digital ocean, automating with python and bash script, 
-                    developing CI/CD pipelines with Jenkins, monitoring with 
-                    Prometheus, and proficient with configuration management with Ansible.
-                    <img class="seg" src="image/segniture-whit.png" alt="">
-                </P>
+                <!-- <img class="img1" src="image/osama-about-me-strock.png" alt="" /> -->
+                <img src="image/osama-about-me-strock-selwet.png" alt="">
+                <p>
+                    I'm a DevOps Engineer, an AWS Certified Cloud Practitioner, and a
+                    graduate of the AWS re/Start program at the Information Technology
+                    Institute (ITI). 
+                    <img class="seg" src="image/segniture-whit.png" alt="" />
+                </p>
             </div>
-
         </div>
     </section>
     <!-- End About me -->
-
 
     <!-- - Skills
     1. Linux 80%
@@ -135,108 +118,112 @@
         <div class="container">
             <div class="title" id="Skills">
                 <h2>Skills</h2>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.</p>
+                <p>
+                    “With hands-on labs and projects, I've studied DevOps tools & technologies in architecting with AWS and digital ocean, automating with python and bash script, developing CI/CD pipelines with Jenkins, monitoring with Prometheus, and proficient with configuration management with Ansible.”
+                </p>
             </div>
-
 
             <div class="cont">
-                <div class="skill-cont ">
-<!-- 1 -->
-                    <div class="prog-holder">
-                        <h4>Linux</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="80%"></span>
-                        </div>
-                    </div>
-<!-- 2 -->
-                    <div class="prog-holder">
-                        <h4>Kubernetes</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="60%"></span>
-                        </div>
-                    </div>
-<!-- 3 -->
-                    <div class="prog-holder">
-                        <h4>Jenkins</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="60%"></span>
-                        </div>
-                    </div>
-<!-- 4 -->
-                    <div class="prog-holder">
-                        <h4>Ansible</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="70%"></span>
-                        </div>
-                    </div>
-<!-- 5 -->
-                    <div class="prog-holder">
-                        <h4>Docker</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="75%"></span>
-                        </div>
-                    </div>
-<!-- 6 -->
-                    <div class="prog-holder">
-                        <h4>AWS</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="70%"></span>
-                        </div>
-                    </div>
-<!-- 7-->
-                    <div class="prog-holder toggle-skills off">
-                        <h4>Terraform</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="80%"></span>
-                        </div>
-                    </div>
-<!-- 8 -->
-                    <div class="prog-holder toggle-skills off">
-                        <h4>Bash</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="70%"></span>
-                        </div>
-                    </div>
-<!-- 9 -->
-                    <div class="prog-holder toggle-skills off">
-                        <h4>Python Scripting</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="75%"></span>
-                        </div>
-                    </div>
-<!-- 10 -->
-                    <div class="prog-holder  toggle-skills off">
-                        <h4>Git &amp; GitHup</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="70%"></span>
-                        </div>
-                    </div>
-<!-- 11 -->
-                    <div class="prog-holder toggle-skills off">
-                        <h4>Html &amp; Css</h4>
-                        <div class="prog">
-                            <span style="width:50%;" data-width="75%"></span>
-                        </div>
-                    </div>
+                <div class="skill-cont">
 
-
-
+                    <div class="skillsCont" id="skillsCont">
+     <!-- less-group-->
+                        <div  id="lessGroup">
+    <!-- 1 -->
+                            <div class="prog-holder">
+                                <h4>Linux</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="80%"></span>
+                                </div>
+                            </div>
+    <!-- 2 -->
+                            <div class="prog-holder">
+                                <h4>Kubernetes</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="60%"></span>
+                                </div>
+                            </div>
+    <!-- 3 -->
+                            <div class="prog-holder">
+                                <h4>Jenkins</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="60%"></span>
+                                </div>
+                            </div>
+    <!-- 4 -->
+                            <div class="prog-holder">
+                                <h4>Ansible</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="70%"></span>
+                                </div>
+                            </div>
+    <!-- 5 -->
+                            <div class="prog-holder">
+                                <h4>Docker</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="75%"></span>
+                                </div>
+                            </div>
+    <!-- 6 -->
+                            <div class="prog-holder">
+                                <h4>AWS</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="70%"></span>
+                                </div>
+                            </div>
+                        </div>
+    
+    <!-- more-group-->
+                        <div class="off" id="moreGroup">
+     <!-- 7-->
+                            <div class="prog-holder  ">
+                                <h4>Terraform</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="80%"></span>
+                                </div>
+                            </div>
+    <!-- 8 -->
+                            <div class="prog-holder  ">
+                                <h4>Bash</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="70%"></span>
+                                </div>
+                            </div>
+    <!-- 9 -->
+                            <div class="prog-holder  ">
+                                <h4>Python Scripting</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="75%"></span>
+                                </div>
+                            </div>
+    <!-- 10 -->
+                            <div class="prog-holder  ">
+                                <h4>Git &amp; GitHup</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="70%"></span>
+                                </div>
+                            </div>
+    <!-- 11 -->
+                            <div class="prog-holder ">
+                                <h4>Html &amp; Css</h4>
+                                <div class="prog">
+                                    <span style="width: 50%" data-width="75%"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+    
+<!-- BTN -->
                     <button class="toggle-skills" id="btn-sk-more">see more</button>
-                    <button class="toggle-skills  off" id="btn-sk-less">see less</button>
+                    <button class="toggle-skills off" id="btn-sk-less">see less</button>
                 </div>
-                <img src="image/key.jpg" alt="">
+                <img src="image/key.jpg" alt="" />
             </div>
         </div>
-
-
     </section>
-    <!-- End Skills -->
+<!-- End Skills -->
 
-
-
-
-
-    <!-- Start Services -->
+<!-- Start Services -->
     <section class="Services">
         <div class="container">
             <div class="title" id="Services">
@@ -249,42 +236,46 @@
                     <i class="fas fa-desktop"></i>
                     <div class="text">
                         <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, beatae.</p>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
+                            beatae.
+                        </p>
                     </div>
                 </div>
                 <div class="serv-box">
                     <i class="fas fa-cog"></i>
                     <div class="text">
                         <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, beatae.</p>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
+                            beatae.
+                        </p>
                     </div>
                 </div>
                 <div class="serv-box">
                     <i class="fas fa-ruler"></i>
                     <div class="text">
                         <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, beatae.</p>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
+                            beatae.
+                        </p>
                     </div>
                 </div>
                 <div class="serv-box">
                     <i class="fas fa-key"></i>
                     <div class="text">
                         <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, beatae.</p>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
+                            beatae.
+                        </p>
                     </div>
                 </div>
             </div>
-
         </div>
-
-
     </section>
-    <!-- End Services -->
-
-
-
-
-
+<!-- End Services -->
 
     <script src="js/main.js"></script>
 </body>
