--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div class="overlay">
             <div class="profilePic">
                 <div class="img">
-                    <!-- <img src="image/osama-profile.png" alt="" /> -->
-                    <img src="image/osama-profile-selwet.png" alt="">
+                    <img src="image/osama-profile.png" alt="" />
+                    <!-- <img src="image/osama-profile-selwet.png" alt=""> -->
                 </div>
             </div>
 
@@ -86,8 +86,8 @@
                 <p>DevOps Engineer</p>
             </div>
             <div class="cont">
-                <!-- <img class="img1" src="image/osama-about-me-strock.png" alt="" /> -->
-                <img src="image/osama-about-me-strock-selwet.png" alt="">
+                <img class="img1" src="image/osama-about-me-strock.png" alt="" />
+                <!-- <img src="image/osama-about-me-strock-selwet.png" alt=""> -->
                 <p>
                     I'm a DevOps Engineer, an AWS Certified Cloud Practitioner, and a
                     graduate of the AWS re/Start program at the Information Technology
