social links @ landing page

--- a/index.html
+++ b/index.html
@@ -63,14 +63,29 @@
                         Osama Youssef <br />
                         <span>
                             DevOps Engineer <br />
-                            | AWS | Docker | <a href="#">...</a>
+                            | AWS | Docker | 
+                            <a href="#iam">...</a>
                         </span>
                     </h2>
                     <p>
-                        I'm a DevOps Engineer, an AWS Certified Cloud Practitioner, and a
-                        graduate of the AWS re/Start program at the Information Technology
-                        Institute (ITI). With hands-on labs and projects,
-                        <a href="#">...</a>
+                        <!-- twitter -->
+                        <a href="https://twitter.com/Osama__Yusuf" target="_planck">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <!-- linkedin -->
+                        <a href="https://www.linkedin.com/in/osama--youssef/" target="_planck">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                        <!-- github -->
+                        <a href="https://github.com/Osama-Yusuf" target="_planck">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <!-- stack-overflow -->
+                        <a href="https://stackoverflow.com/users/14504222/osama-mohamed?tab=profile" target="_planck">
+                            <i class="fa-brands fa-stack-overflow"></i>
+                        </a>
+
+                        <!-- <a href="#">...</a> -->
                     </p>
                 </div>
             </div>
